iki: local.css: fix :target contrast on light theme

--- a/iki/local.css
+++ b/iki/local.css
@@ -143,6 +143,9 @@ div.recentchanges {
   a:visited {
     color: #551A8B;
   }
+  :target {
+    background-color: #ee8;
+  }
   th, summary, input {
     background: #ccc;
     color: #141415;
